# Deribittask

./: .dockerignore  .env  .env.example  README.md  pyproject.toml  recovery.patch  requirements.txt
migrations/: env.py
migrations/versions/: b46c5ae97f41_.py
src/: config.py  database.py  main.py  utilits.py
src/currency/: celery_config.py  models.py  router.py  schemas.py  service.py
test/unit/: test_api.py
