[project]
name = "testtask"
version = "0.1.0"
description = ""
authors = [
    {name = "N1chegons",email = "krikignatenko@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohappyeyeballs (==2.6.1)",
    "aiohttp (==3.13.3)",
    "aiosignal (==1.4.0)",
    "alembic (==1.18.1)",
    "amqp (==5.3.1)",
    "annotated-doc (==0.0.4)",
    "annotated-types (==0.7.0)",
    "anyio (==4.12.1)",
    "asgiref (==3.11.0)",
    "asyncpg (==0.31.0)",
    "attrs (==25.4.0)",
    "billiard (==4.2.4)",
    "celery (==5.6.2)",
    "celery-pool-asyncio (==0.2.0)",
    "certifi (==2026.1.4)",
    "cffi (==2.0.0)",
    "charset-normalizer (==3.4.4)",
    "click (==8.3.1)",
    "click-didyoumean (==0.3.1)",
    "click-plugins (==1.1.1.2)",
    "click-repl (==0.3.0)",
    "colorama (==0.4.6)",
    "dnspython (==2.8.0)",
    "email-validator (==2.3.0)",
    "fastapi (==0.128.0)",
    "fastapi-cli (==0.0.20)",
    "fastapi-cloud-cli (==0.11.0)",
    "fastar (==0.8.0)",
    "frozenlist (==1.8.0)",
    "gevent (==25.9.1)",
    "greenlet (==3.3.0)",
    "h11 (==0.16.0)",
    "httpcore (==1.0.9)",
    "httptools (==0.7.1)",
    "httpx (==0.28.1)",
    "idna (==3.11)",
    "iniconfig (==2.3.0)",
    "itsdangerous (==2.2.0)",
    "jinja2 (==3.1.6)",
    "kombu (==5.6.2)",
    "mako (==1.3.10)",
    "markdown-it-py (==4.0.0)",
    "markupsafe (==3.0.3)",
    "mdurl (==0.1.2)",
    "multidict (==6.7.0)",
    "nest-asyncio (==1.6.0)",
    "orjson (==3.11.5)",
    "packaging (==25.0)",
    "pluggy (==1.6.0)",
    "prompt-toolkit (==3.0.52)",
    "propcache (==0.4.1)",
    "psycopg2 (==2.9.11)",
    "pycparser (==2.23)",
    "pydantic (==2.12.5)",
    "pydantic-extra-types (==2.11.0)",
    "pydantic-settings (==2.12.0)",
    "pydantic-core (==2.41.5)",
    "pygments (==2.19.2)",
    "pytest (==9.0.2)",
    "python-dateutil (==2.9.0.post0)",
    "python-dotenv (==1.2.1)",
    "python-multipart (==0.0.21)",
    "pyyaml (==6.0.3)",
    "redis (==6.4.0)",
    "requests (==2.32.5)",
    "rich (==14.2.0)",
    "rich-toolkit (==0.17.1)",
    "rignore (==0.7.6)",
    "sentry-sdk (==2.50.0)",
    "shellingham (==1.5.4)",
    "six (==1.17.0)",
    "sqlalchemy (==2.0.45)",
    "starlette (==0.50.0)",
    "typer (==0.21.1)",
    "typing-inspection (==0.4.2)",
    "typing-extensions (==4.15.0)",
    "tzdata (==2025.3)",
    "tzlocal (==5.3.1)",
    "ujson (==5.11.0)",
    "urllib3 (==2.6.3)",
    "uvicorn (==0.40.0)",
    "vine (==5.1.0)",
    "watchfiles (==1.1.1)",
    "wcwidth (==0.2.14)",
    "websockets (==16.0)",
    "yarl (==1.22.0)",
    "zope-event (==6.1)",
    "zope-interface (==8.2)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
